--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -179,7 +179,7 @@
       width: 97%;
       max-width: 1150px;
     }
-    .content   { width: 80%; max-width: 900px;}
+    .content-main  { width: 80%; max-width: 900px;}
     .sidebar   { width: 28%; min-width: 250px; }
     .highlight {
       background: #fffbe6;
@@ -320,7 +320,7 @@
 
 
     @media (max-width: 1150px) {
-  .search-box, .breadcrumb, .line-separator, h1, h2, h3, .content,.section,.sidebar,.sidebar ul{
+  .search-box, .breadcrumb, .line-separator, h1, h2, h3, .content-main,.section,.sidebar,.sidebar ul{
     flex-wrap: wrap !important;
     width: 100% !important;
     max-width: 100% !important;
@@ -351,7 +351,7 @@
     max-width: 100% !important;
     margin-top: 5px !important;
   }
-  .sidebar, .content {
+  .sidebar, .content-main {
     width: 100% !important;
   }
  
