with scheduled rake

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -513,7 +513,7 @@
         </datalist>
     
 
-    <div style="position:relative; max-width:340px;">
+    <div style="position:relative; max-width:auto ;">
       <input type="text" id="input-from" autocomplete="off" placeholder="Any Airport or City">
       <div id="dropdown-from" class="dropdown-list"></div>
     </div>
@@ -527,7 +527,7 @@
       </svg>
     </button>
 
-    <div style="position:relative; max-width:340px;">
+    <div style="position:relative; max-width:auto;">
       <input type="text" id="input-to" autocomplete="off" placeholder="Any Airport or City">
       <div id="dropdown-to" class="dropdown-list"></div>
     </div>    
